--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adventure Decision Selector</title>
+    <title>SCA Scenario Challenge</title>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -99,7 +99,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Select Your Adventure Path</h1>
+        <h1>SCA Scenario Challenge</h1>
         
         <div class="group">
             <h2>Question 1: Before entering the battlefield, the four of you come across three different paths. Each path seems to lead to a unique challenge. Which path will you choose?</h2>
